2008-12-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - implement FrameLoaderClient::shouldUseCredentialStorage() by calling
          a new resource load delegae method.

        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::shouldUseCredentialStorage): Added. Calls the
        delegate method. If the method is unimplemented, returns true for
        backwards compatibility.
        * WebView/WebView.mm: 
        (-[WebView _cacheResourceLoadDelegateImplementations]): Initialize the
        shouldUseCredentialStorageFunc member.
        (CallResourceLoadDelegateReturningBoolean): Added.
        * WebView/WebViewInternal.h:
        * WebView/WebResourceLoadDelegatePrivate.h: Declared the delegate method
        -webView:resource:shouldUseCredentialStorageForDataSource:.

2008-12-18  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Jonathan Honeycutt.

        Fix an apparent typo in r39385 that is causing lots of crashes.

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::dispatchDidFirstVisuallyNonEmptyLayout):

2008-12-18  Brady Eidson  <beidson@apple.com>

        Reviewed by John Sullivan

        Initial visit to a website creates history items that start with a visit count of
        zero instead of one

        * History/WebHistory.mm:
        (-[WebHistoryPrivate visitedURL:withTitle:]): Set the visit count on new items

        * History/WebHistoryItem.mm:
        (-[WebHistoryItem _setVisitCount:]): Call through to the WebCore item
        * History/WebHistoryItemInternal.h:

2008-12-18  Sam Weinig  <sam@webkit.org>

        Reviewed by John Sullivan.

        Implement FrameLoaderClient::dispatchDidFirstVisuallyNonEmptyLayout() by calling
        a new private frame load delegate method.

        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameLoaderClient.mm: