@@ -107,6 +107,10 @@ public:
     virtual HRESULT STDMETHODCALLTYPE historyAgeInDaysLimit( 
         /* [retval][out] */ int* limit);
 
+    virtual HRESULT STDMETHODCALLTYPE allItems( 
+        /* [out][in] */ int* count,
+        /* [in] */ IWebHistoryItem** items);
+
     // WebHistory
     static WebHistory* sharedHistory();
     void addItem(const WebCore::KURL&, const WebCore::String& title, bool wasFailure);
