@@ -1,3 +1,14 @@
+2008-12-19  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Darin Adler, Adele Peterson, Brady Eidson.
+        
+        Added SPI for getting an unsorted vector of all items in history.
+        
+        * WebHistory.cpp:
+        (WebHistory::orderedItemsLastVisitedOnDay):
+        (WebHistory::allItems):
+        * WebHistory.h:
+
 2008-12-18  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
