@@ -1,3 +1,13 @@
+2008-12-19  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Darin Adler, Adele Peterson, Brady Eidson.
+        
+        Added SPI for getting an unsorted vector of all items in history.
+        
+        * History/WebHistory.h:
+        * History/WebHistory.mm:
+        (-[WebHistory allItems]):
+
 2008-12-18  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
